npr/bar-stg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-stg
spec:
  template:
    spec:
      containers:
        - name: bar-stg
          image: mendhak/http-https-echo:31
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 128Mi
