npr/bar-stg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-stg
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
