npr/bar-stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-stg
spec:
  ingressClassName: nginx
  rules:
    - host: bar-stg.zasda.id
      http:
        paths:
          - backend:
              service:
                name: bar-stg
                port:
                  number: 80
            path: /
            pathType: Prefix
